scss/_config.scss
//* ~~~~~~~~~~ Variables ~~~~~~~~~~
$primary-color: #444;
$secondary-color: #eece1a;
$show-home-image: true;
$home-image: url(../images/bg.jpg);
$background-opacity: 0.7;

//* ~~~~~~~~~~ Mixin's ~~~~~~~~~~
@mixin easeOut {
   transition: all 0.5s ease-out;
}

@mixin background {
   @if $show-home-image {
      &#bg-img {
         background: $home-image;
         background-attachment: fixed;
         background-size: cover;
         background-repeat: no-repeat;
         background-position: top right;  
         height: 100vh;

         &:after {
            content: '';
            background: rgba($primary-color,$background-opacity);
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            right: 0;
         }
      }
   }
}

//* ~~~~~~~~~~ Set text color ~~~~~~~~~~
@function set-text-color($color) {
   @if (lightness($color) > 40) {
      @return #000;
   }
   @else {
      @return #fff;
   }
}

//* ~~~~~~~~~~ MEDIA QUERIES ~~~~~~~~~~
@mixin mediaSm {
   @media screen and (max-width: 500px) {
      @content;
   }
}

@mixin mediaMd {
   @media screen and (max-width: 768px) {
      @content;
   }
}

@mixin mediaLg {
   @media screen and (min-width: 769px) and (max-width: 1170px) {
      @content;
   }
}

@mixin mediaXl {
   @media screen and (min-width: 1171px) {
      @content;
   }
}

